--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/light2_gray"
+    android:background="@color/lesson"
     android:padding="0dp">
 
     <!-- Текстовое поле для даты -->
@@ -12,7 +12,7 @@
         android:id="@+id/tvScheduleDate"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:background="@color/light_blue"
+        android:background="@color/colorPrimary"
         android:gravity="top|center_horizontal"
         android:maxLines="1"
         android:textSize="20sp"
@@ -31,7 +31,6 @@
         android:gravity="top|center_horizontal"
         android:maxLines="1"
         android:textSize="18sp"
-        android:textColor="@color/black"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +42,6 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="2dp"
-        android:background="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPairNumber" />
@@ -56,7 +54,6 @@
         android:ellipsize="middle"
         android:maxLines="4"
         android:textSize="18sp"
-        android:textColor="@color/black"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +65,6 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="2dp"
-        android:background="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvClassName" />
@@ -80,7 +76,6 @@
         android:layout_height="wrap_content"
         android:maxLines="10"
         android:textSize="16sp"
-        android:textColor="@color/black"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +87,6 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="2dp"
-        android:background="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvGroupName" />
@@ -104,7 +98,6 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:textSize="16sp"
-        android:textColor="@color/black"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +109,6 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="2dp"
-        android:background="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvClassroom" />
@@ -129,7 +121,6 @@
         android:ellipsize="end"
         android:maxLines="3"
         android:textSize="16sp"
-        android:textColor="@color/black"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,7 +131,6 @@
         android:layout_width="0dp"
         android:layout_height="6dp"
         android:layout_marginTop="6dp"
-        android:background="@color/light_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTeacherName" />
