--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -104,7 +104,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="4dp"
-                    android:background="@color/top" />
+                    android:background="@color/divider" />
 
             </LinearLayout>
 
@@ -138,7 +138,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
-                android:background="@color/top" />
+                android:background="@color/divider" />
 
             <!-- Google Calendar Section -->
             <LinearLayout
@@ -217,7 +217,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
-                android:background="@color/top" />
+                android:background="@color/divider" />
 
             <!-- Date Range Selection Section -->
             <LinearLayout
@@ -299,7 +299,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
-                android:background="@color/top" />
+                android:background="@color/divider" />
 
             <!-- Auto Update Section -->
             <LinearLayout
@@ -387,7 +387,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="4dp"
-                    android:background="@color/top" />
+                    android:background="@color/divider" />
 
             </LinearLayout>
 
@@ -611,7 +611,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="4dp"
-                    android:background="@color/top" />
+                    android:background="@color/divider" />
             </LinearLayout>
 
             <!-- Do Not Disturb Mode Section -->
@@ -708,7 +708,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="4dp"
-                    android:background="@color/top" />
+                    android:background="@color/divider" />
             </LinearLayout>
 
         </LinearLayout>
