--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,16 +28,29 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
+                    <ImageView
+                        android:id="@+id/puet_logo"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/puet_logo"
+                        android:contentDescription="@string/app_name"
+                        android:clickable="true"
+                        android:focusable="true" />
+
                     <TextView
                         android:id="@+id/toolbar_title"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:paddingStart="20dp"
                         android:drawablePadding="20dp"
                         android:text="@string/schedule_title"
                         android:textColor="@color/white"
-                        android:textSize="22sp"
-                        app:drawableStartCompat="@drawable/puet_logo" />
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:clickable="true"
+                        android:focusable="true"
+                        tools:ignore="RtlSymmetry" />
 
                     <ImageButton
                         android:id="@+id/settings_button"
@@ -84,6 +97,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
+                        android:textSize="20sp"
                         android:text="@string/select_search_parameters"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                 </LinearLayout>
@@ -341,7 +355,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="20dp"
                     android:background="@color/colorPrimary" />
 
                 <!-- Контейнер для текста -->
@@ -355,6 +369,20 @@
                     android:textSize="16sp"
                     android:textColorHint="@color/textColor"
                     android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/privacyPolicy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/privacy_policy"
+                    android:textSize="16sp"
+                    android:textColor="@color/linkColor"
+                    android:padding="16dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:autoLink="web" />
 
                 <View
                     android:layout_width="match_parent"
