--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_layout"
+    android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <View
+        android:id="@+id/focus_catcher"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,15 +51,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingStart="20dp"
+                        android:clickable="true"
                         android:drawablePadding="20dp"
+                        android:focusable="true"
+                        android:paddingStart="16dp"
                         android:text="@string/schedule_title"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
+                        android:textSize="21sp"
                         android:textStyle="bold"
-                        android:clickable="true"
-                        android:focusable="true"
-                        tools:ignore="RtlSymmetry" />
+                        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
 
                     <ImageButton
                         android:id="@+id/settings_button"
