--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_layout"
-    android:focusable="true"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -77,6 +76,9 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
+            android:id="@+id/root_layout"
+            android:focusable="true"
+            android:clickable="true"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fillViewport="true">
